# REID-pipeline

./: README.md  docker-compose.yml  main.py  pipeline.py  probe_handler.py  pyproject.toml
config/: peoplenet_infer.txt  reid_infer.txt  tracker_NvDCF.yml
reid/: feature_store.py  gallery.py  matcher.py
